--- a/SportNews/Base.lproj/Main.storyboard
+++ b/SportNews/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
                                             <color key="textColor" white="0.41964660234899331" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Футбол" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hNp-fb-4vf">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Футбол" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hNp-fb-4vf">
                                             <rect key="frame" x="496" y="8" width="96" height="19"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="19" id="4jH-uX-OJv"/>
